fix wrong alignment of found-counter on search panel

--- a/styles/panels.less
+++ b/styles/panels.less
@@ -76,7 +76,8 @@ atom-panel {
 }
 
 .find-and-replace .find-meta-container {
-  margin-top: 3px;
+  height: 24px;
+  line-height: 24px;
   font-size: 1em;
   color: @text-color-subtle;
 }
